# Mini-Projekt-C---Interpreter

./: Ablage.txt  CMakeLists.txt  Checkliste_Person_A.md  Checkliste_Person_B.md  Checkliste_Person_C.md  Makefile  Makefile.interp  Person_A_Neue_Aufgaben.md  Person_B_Neue_Aufgaben.md  Person_C_Neue_Aufgaben.md  README.md  Runtime-Model.md
src/: main.cpp
src/ast/: AST.cpp  AST.h  ASTBuilder.cpp  ASTBuilder.h  ASTVisitor.h  PrettyPrinter.h
src/grammar/: cpp.g4
src/interpreter/: Interpreter.cpp  Interpreter.h  ReturnSignal.h
src/runtime/: Cell.h  Object.h  Reference.h  StackFrame.h  Value.h  hsbi_runtime.h
src/semantic/: SemanticChecker.cpp  SemanticChecker.h  SymbolTable.h  Type.h
tests/: test_aktuell.cpp
tests/pos/: GOLD01_basics.cpp
